inhertiance implementation and async/await on create query
