# api/users/router.js
@@ -8,4 +8,5 @@ module.exports = express
   .post('/register',validation.create, controller.create)
   .post('/login',validation.login, controller.login)
   .post('/resetPassword',validation.resetPassword,auth.verifyJWT_MW, controller.resetPassword)
-  .post('/forgotPassword',validation.forgotPassword,controller.forgotPassword);
+  .post('/forgotPassword',validation.forgotPassword,controller.forgotPassword)
+  .post('/upload',controller.fileUpload);
