# swagger/Api.yaml
@@ -170,6 +170,16 @@ paths:
       responses:
         200:
           description: Returns all examples
+  /users/upload:
+     post:
+       summary: Uploads a file.
+       consumes:
+         - multipart/form-data
+       parameters:
+         - in: formData
+           name: upfile
+           type: file
+           description: The file to upload.
   /spec:
     get:
       tags:
